Previous vae commit was broken

--- a/vae_baseline.ipynb
+++ b/vae_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 178,
    "metadata": {
     "scrolled": true
    },
@@ -125,7 +125,7 @@
        "2414"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "659"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,24 +222,24 @@
     "            \n",
     "        return self.logits(torch.cat(outputs, dim=0))\n",
     "    \n",
-    "    def generate(self, z, nsections):\n",
+    "    def generate(self, z, nsections, embedding):\n",
     "        assert(z.shape == (1, 1, self.latent_size))\n",
     "        \n",
-    "        conductor_hidden = torch.tanh(self.conductor_linear(z))\n",
-    "        conductor_input = torch.zeros((1, B, 1)).to(dev) # Null input for conductor\n",
-    "        gru_input = torch.zeros((1, B, self.hidden_size)).to(dev)\n",
+    "        conductor_hidden = torch.tanh(self.conductor_linear(z)).repeat(2, 1, 1)\n",
+    "        conductor_input = torch.zeros((1, 1, 1)).to(dev) # Null input for conductor\n",
+    "        gru_input = torch.zeros((1, 1, self.hidden_size)).to(dev)\n",
     "        messages = []\n",
     "        for section in range(nsections):\n",
     "            hid, conductor_hidden = self.conductor_gru(conductor_input, conductor_hidden)\n",
     "            hidden = conductor_hidden.clone()\n",
     "            \n",
-    "            for message in self.section_size:\n",
+    "            for message in range(self.section_size):\n",
     "                output, hidden = self.gru(gru_input, hidden)\n",
     "                probs = torch.nn.functional.softmax(self.logits(output), dim=2).flatten()\n",
     "                messages.append(torch.multinomial(probs, 1))\n",
-    "                gru_input = self.embedding(messages[-1].view(1, 1, 1))\n",
+    "                gru_input = embedding(messages[-1]).view(1, 1, -1)\n",
     "            \n",
-    "        return outputs\n",
+    "        return messages\n",
     "    \n",
     "class BaselineVAE(torch.nn.Module):\n",
     "    def __init__(self, message_dim, hidden_size, latent_size, section_size):\n",
@@ -264,12 +264,25 @@
     "        logits = self.decoder(z, message_embed)\n",
     "\n",
     "        return torch.nn.functional.cross_entropy(logits.view(-1, self.message_dim), messages.flatten()) - \\\n",
-    "               0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar))"
+    "               0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar))\n",
+    "    \n",
+    "    # Reconstruct messages\n",
+    "    def reconstruct(self, messages):\n",
+    "        L = messages.shape[0]\n",
+    "        assert(messages.shape[1] == 1)\n",
+    "        \n",
+    "        message_embed = self.embedding(messages[:-1])\n",
+    "        z_mean, z_logvar = self.encoder(message_embed)\n",
+    "        z_std = torch.exp(0.5*z_logvar)\n",
+    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        z = z_mean + eps*z_std\n",
+    "        logits = self.decoder(z, message_embed).view(-1, self.message_dim)\n",
+    "        return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +494,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,15 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test reconstruction\n",
     "original = train_data[0].unsqueeze(1)\n",
     "reconstruction = model.reconstruct(original).flatten() # Should sound roughly the same as the original\n",
-    "np.save('vae_midis/original0.npy', original.flatten().detach().numpy())\n",
-    "np.save('vae_midis/reconstruction0.npy', reconstruction.detach().numpy())"
+    "np.save('baseline_vae_midis/original10.npy', original.flatten().detach().numpy())\n",
+    "np.save('baseline_vae_midis/reconstruction10.npy', reconstruction.detach().numpy())"
    ]
   },
   {
