Removed train_chunked. Added kld weight annealing to vae, but doesn't help reconstruction

--- a/vae_baseline.ipynb
+++ b/vae_baseline.ipynb
@@ -44,7 +44,7 @@
     "    # contains recording0.npy to recordingM.npy\n",
     "    # ARGUMENTS\n",
     "    # root_dir: the directory to search\n",
-    "    # chunk_size: we'll chunk the data into chunks of this size (or less)\n",
+    "    # chunk_size: we'll chunk the data into chunks of this size (no more, no less)\n",
     "    def __init__(self, root_dir, chunk_size, transform=None):\n",
     "        self.chunks = []\n",
     "        self.masks = []\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "                messages.append(torch.multinomial(probs, 1))\n",
     "                gru_input = embedding(messages[-1]).view(1, 1, -1)\n",
     "            \n",
-    "        return messages\n",
+    "        return [message.item() for message in messages]\n",
     "    \n",
     "class BaselineVAE(torch.nn.Module):\n",
     "    def __init__(self, message_dim, hidden_size, latent_size, section_size):\n",
@@ -252,7 +252,7 @@
     "        self.normal_sampler = torch.distributions.normal.Normal(torch.tensor([0.0]), torch.tensor([1.0]))\n",
     "        \n",
     "    # Compute loss\n",
-    "    def forward(self, messages):\n",
+    "    def forward(self, messages, kld_weight):\n",
     "        L = messages.shape[0]\n",
     "        B = messages.shape[1]\n",
     "        \n",
@@ -264,7 +264,7 @@
     "        logits = self.decoder(z, message_embed)\n",
     "\n",
     "        return torch.nn.functional.cross_entropy(logits.view(-1, self.message_dim), messages.flatten()) - \\\n",
-    "               0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar))\n",
+    "               kld_weight*0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar))\n",
     "    \n",
     "    # Reconstruct messages\n",
     "    def reconstruct(self, messages):\n",
@@ -276,13 +276,41 @@
     "        z_std = torch.exp(0.5*z_logvar)\n",
     "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
     "        z = z_mean + eps*z_std\n",
-    "        logits = self.decoder(z, message_embed).view(-1, self.message_dim)\n",
-    "        return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1)"
+    "        \n",
+    "        nsections = int(np.ceil(L/self.decoder.section_size))\n",
+    "        return self.decoder.generate(z, nsections, self.embedding)\n",
+    "    \n",
+    "        # Was using teacher forcing before\n",
+    "        #logits = self.decoder(z, message_embed).view(-1, self.message_dim)\n",
+    "        #return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1)\n",
+    "    \n",
+    "    # Interpolate between the two sequences and produce a mashup (hopefully lol)\n",
+    "    def interpolate(self, messages1, messages2, weight1):\n",
+    "        L = messages1.shape[0]\n",
+    "        assert(messages.shape[1] == 1 and messages2.shape[1] == 1)\n",
+    "        assert(0 <= weight1 <= 1)\n",
+    "        \n",
+    "        message_embed = self.embedding(messages1[:-1])\n",
+    "        z_mean, z_logvar = self.encoder(message_embed)\n",
+    "        z_std = torch.exp(0.5*z_logvar)\n",
+    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        z1 = z_mean + eps*z_std\n",
+    "        \n",
+    "        message_embed = self.embedding(messages2[:-1])\n",
+    "        z_mean, z_logvar = self.encoder(message_embed)\n",
+    "        z_std = torch.exp(0.5*z_logvar)\n",
+    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        z2 = z_mean + eps*z_std\n",
+    "        \n",
+    "        z = weight1*z1 + weight2*z2\n",
+    "        \n",
+    "        nsections = int(np.ceil(L/self.decoder.section_size))\n",
+    "        return self.decoder.generate(z, nsections, self.embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +320,9 @@
     "learning_rate = 1e-3\n",
     "\n",
     "# Model parameters: \n",
-    "message_dim = 388\n",
+    "num_notes = 128\n",
+    "num_time_shifts = 100 \n",
+    "message_dim = 2*num_notes + num_time_shifts\n",
     "hidden_size = 1024\n",
     "latent_size = 512\n",
     "section_size = 200\n",
@@ -308,120 +338,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting epoch 0\n",
-      "Starting iteration 0\n",
-      "Starting iteration 10\n",
-      "Starting iteration 20\n",
-      "Starting iteration 30\n",
-      "Starting iteration 40\n",
-      "Starting iteration 50\n",
-      "Starting iteration 60\n",
-      "Starting iteration 70\n",
-      "Starting iteration 80\n",
-      "Starting iteration 90\n",
-      "Starting iteration 100\n",
-      "Starting iteration 110\n",
-      "Starting iteration 120\n",
-      "Starting iteration 130\n",
-      "Starting iteration 140\n",
-      "Starting iteration 150\n",
-      "Starting iteration 160\n",
-      "Starting iteration 170\n",
-      "Starting iteration 180\n",
-      "Starting iteration 190\n",
-      "Starting iteration 200\n",
-      "Starting iteration 210\n",
-      "Starting iteration 220\n",
-      "Starting iteration 230\n",
-      "Starting iteration 240\n",
-      "Starting iteration 250\n",
-      "Starting iteration 260\n",
-      "Starting iteration 270\n",
-      "Starting iteration 280\n",
-      "Starting iteration 290\n",
-      "Starting iteration 300\n",
-      "Starting iteration 310\n",
-      "Starting iteration 320\n",
-      "Starting iteration 330\n",
-      "Starting iteration 340\n",
-      "Starting iteration 350\n",
-      "Starting iteration 360\n",
-      "Starting iteration 370\n",
-      "Starting iteration 380\n",
-      "Starting iteration 390\n",
-      "Starting iteration 400\n",
-      "Starting iteration 410\n",
-      "Starting iteration 420\n",
-      "Starting iteration 430\n",
-      "Starting iteration 440\n",
-      "Starting iteration 450\n",
-      "Starting iteration 460\n",
-      "Starting iteration 470\n",
-      "Computing test loss\n",
-      "Computing train loss\n",
-      "Train loss: 1.872301, Test loss: 2.183596\n",
-      "Starting epoch 1\n",
-      "Starting iteration 0\n",
-      "Starting iteration 10\n",
-      "Starting iteration 20\n",
-      "Starting iteration 30\n",
-      "Starting iteration 40\n",
-      "Starting iteration 50\n",
-      "Starting iteration 60\n",
-      "Starting iteration 70\n",
-      "Starting iteration 80\n",
-      "Starting iteration 90\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-68-e220434b9e1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    196\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m         \"\"\"\n\u001b[0;32m--> 198\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     98\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     99\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_losses = [0 for epoch in range(epochs)]\n",
     "test_losses = [0 for epoch in range(epochs)]\n",
+    "iterations = 0\n",
+    "nbatches = len(train_dataloader)\n",
     "for epoch in range(epochs):\n",
     "    print('Starting epoch %d' %(epoch))\n",
     "    model.train()\n",
     "    for b, batch in enumerate(train_dataloader):\n",
     "        if b%10 == 0:\n",
     "            print('Starting iteration %d' %(b))\n",
-    "        loss = model(batch)\n",
+    "            \n",
+    "        # KLD cost annealing\n",
+    "        kld_weight = 0.2*(1 - np.exp(-2*iterations/nbatches))\n",
+    "        \n",
+    "        loss = model(batch, kld_weight)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "        iterations += 1\n",
     "        \n",
     "    torch.save(model.state_dict(), checkpoint_dir + '/epoch' + str(epoch) + '.pth')\n",
     "        \n",
     "    model.eval()\n",
     "    print('Computing test loss')\n",
     "    for b, batch in enumerate(test_dataloader):\n",
-    "        test_losses[epoch] += model(batch).item()\n",
+    "        test_losses[epoch] += model(batch, 1).item()\n",
     "        \n",
     "    test_losses[epoch] /= len(test_dataloader)\n",
     "        \n",
     "    print('Computing train loss')\n",
     "    for b, batch in enumerate(train_dataloader):\n",
-    "        train_losses[epoch] += model(batch).item()\n",
+    "        train_losses[epoch] += model(batch, 1).item()\n",
     "        \n",
     "    train_losses[epoch] /= len(train_dataloader)\n",
     "        \n",
@@ -485,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -494,19 +448,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = BaselineVAE(message_dim, hidden_size, latent_size, section_size).to(dev)\n",
-    "model.load_state_dict(torch.load('baseline_vae_checkpoints/epoch9.pth', map_location=dev))"
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth', map_location=dev))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,24 +482,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('recording_vae.npy', np.array(generated_music))"
+    "np.save('baseline_vae_midis/recording_vae.npy', np.array(generated_music))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test reconstruction\n",
     "original = train_data[0].unsqueeze(1)\n",
-    "reconstruction = model.reconstruct(original).flatten() # Should sound roughly the same as the original\n",
-    "np.save('baseline_vae_midis/original10.npy', original.flatten().detach().numpy())\n",
-    "np.save('baseline_vae_midis/reconstruction10.npy', reconstruction.detach().numpy())"
+    "reconstruction = model.reconstruct(original) # Should sound roughly the same as the original\n",
+    "np.save('baseline_vae_midis/original0.npy', original.flatten().detach().numpy())\n",
+    "np.save('baseline_vae_midis/reconstruction0.npy', np.array(reconstruction))"
    ]
   },
   {
