--- a/data_to_midi_vae.ipynb
+++ b/data_to_midi_vae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('recording_vae.npy', allow_pickle=True)"
+    "data = np.load('baseline_vae_midis/recording_vae.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording.write(\"vae_midis/vae_sample.mid\")"
+    "recording.write(\"baseline_vae_midis/sample.mid\")"
    ]
   },
   {
