Fixed a bug in vae

--- a/vae_baseline.ipynb
+++ b/vae_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -125,7 +125,7 @@
        "2414"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "659"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
     "        self.latent_size = latent_size\n",
     "        self.conductor_linear = torch.nn.Linear(latent_size, hidden_size)\n",
     "        self.conductor_gru = torch.nn.GRU(1, hidden_size, num_layers=2)\n",
-    "        self.gru = torch.nn.GRU(hidden_size, hidden_size, num_layers=2)\n",
+    "        self.gru = torch.nn.GRU(2*hidden_size, hidden_size, num_layers=2)\n",
     "        self.logits = torch.nn.Linear(hidden_size, message_dim)\n",
     "\n",
     "    # Return teacher forced logits\n",
@@ -217,6 +217,7 @@
     "            # Teacher forcing\n",
     "            gru_inputs = torch.cat((init_gru_input, forced_input_embed[start:end]), dim=0)\n",
     "            init_hidden = conductor_hidden.clone()\n",
+    "            gru_inputs = torch.cat((gru_inputs, init_hidden[0].unsqueeze(0).expand(gru_inputs.shape[0], -1, -1)), dim=2)\n",
     "            output, hidden = self.gru(gru_inputs, init_hidden)\n",
     "            outputs.append(output)\n",
     "            \n",
@@ -227,17 +228,17 @@
     "        \n",
     "        conductor_hidden = torch.tanh(self.conductor_linear(z)).repeat(2, 1, 1)\n",
     "        conductor_input = torch.zeros((1, 1, 1)).to(dev) # Null input for conductor\n",
-    "        gru_input = torch.zeros((1, 1, self.hidden_size)).to(dev)\n",
     "        messages = []\n",
     "        for section in range(nsections):\n",
     "            hid, conductor_hidden = self.conductor_gru(conductor_input, conductor_hidden)\n",
     "            hidden = conductor_hidden.clone()\n",
+    "            gru_input = torch.cat((torch.zeros((1, 1, self.hidden_size)).to(dev), conductor_hidden[0].unsqueeze(0)), dim=2)\n",
     "            \n",
     "            for message in range(self.section_size):\n",
     "                output, hidden = self.gru(gru_input, hidden)\n",
     "                probs = torch.nn.functional.softmax(self.logits(output), dim=2).flatten()\n",
     "                messages.append(torch.multinomial(probs, 1))\n",
-    "                gru_input = embedding(messages[-1]).view(1, 1, -1)\n",
+    "                gru_input = torch.cat((embedding(messages[-1]).view(1, 1, -1), conductor_hidden[0].unsqueeze(0)), dim=2)\n",
     "            \n",
     "        return [message.item() for message in messages]\n",
     "    \n",
@@ -249,7 +250,6 @@
     "        self.embedding = torch.nn.Embedding(message_dim, hidden_size)\n",
     "        self.encoder = VAEEncoder(message_dim, hidden_size, latent_size)\n",
     "        self.decoder = VAEDecoder(latent_size, hidden_size, message_dim, section_size)\n",
-    "        self.normal_sampler = torch.distributions.normal.Normal(torch.tensor([0.0]), torch.tensor([1.0]))\n",
     "        \n",
     "    # Compute loss\n",
     "    def forward(self, messages, kld_weight):\n",
@@ -259,7 +259,7 @@
     "        message_embed = self.embedding(messages[:-1])\n",
     "        z_mean, z_logvar = self.encoder(message_embed)\n",
     "        z_std = torch.exp(0.5*z_logvar)\n",
-    "        eps = self.normal_sampler.sample(sample_shape=(1, B)).to(dev)\n",
+    "        eps = torch.randn_like(z_mean)\n",
     "        z = z_mean + eps*z_std\n",
     "        logits = self.decoder(z, message_embed)\n",
     "\n",
@@ -274,7 +274,7 @@
     "        message_embed = self.embedding(messages[:-1])\n",
     "        z_mean, z_logvar = self.encoder(message_embed)\n",
     "        z_std = torch.exp(0.5*z_logvar)\n",
-    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        eps = torch.randn_like(z_mean)\n",
     "        z = z_mean + eps*z_std\n",
     "        \n",
     "        nsections = int(np.ceil(L/self.decoder.section_size))\n",
@@ -282,7 +282,7 @@
     "    \n",
     "        # Was using teacher forcing before\n",
     "        #logits = self.decoder(z, message_embed).view(-1, self.message_dim)\n",
-    "        #return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1)\n",
+    "        #return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1).flatten()\n",
     "    \n",
     "    # Interpolate between the two sequences and produce a mashup (hopefully lol)\n",
     "    def interpolate(self, messages1, messages2, weight1):\n",
@@ -293,13 +293,13 @@
     "        message_embed = self.embedding(messages1[:-1])\n",
     "        z_mean, z_logvar = self.encoder(message_embed)\n",
     "        z_std = torch.exp(0.5*z_logvar)\n",
-    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        eps = torch.randn_like(z_mean)\n",
     "        z1 = z_mean + eps*z_std\n",
     "        \n",
     "        message_embed = self.embedding(messages2[:-1])\n",
     "        z_mean, z_logvar = self.encoder(message_embed)\n",
     "        z_std = torch.exp(0.5*z_logvar)\n",
-    "        eps = self.normal_sampler.sample(sample_shape=(1, 1)).to(dev)\n",
+    "        eps = torch.randn_like(z_mean)\n",
     "        z2 = z_mean + eps*z_std\n",
     "        \n",
     "        z = weight1*z1 + weight2*z2\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,20 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample from model\n",
     "def generate_music(model, gen_length=500):\n",
-    "    z = model.normal_sampler.sample(sample_shape=(1, 1, latent_size)).squeeze(3)\n",
+    "    z = torch.randn_like(torch.zeros((1, 1, latent_size)))\n",
     "    nsections = int(np.ceil(gen_length/section_size))\n",
     "    return model.decoder.generate(z, nsections, model.embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,24 +482,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('baseline_vae_midis/recording_vae.npy', np.array(generated_music))"
+    "np.save('baseline_vae_midis/sample.npy', np.array(generated_music))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test reconstruction\n",
-    "original = train_data[0].unsqueeze(1)\n",
+    "original = train_data[50].unsqueeze(1)\n",
     "reconstruction = model.reconstruct(original) # Should sound roughly the same as the original\n",
-    "np.save('baseline_vae_midis/original0.npy', original.flatten().detach().numpy())\n",
-    "np.save('baseline_vae_midis/reconstruction0.npy', np.array(reconstruction))"
+    "np.save('baseline_vae_midis/original50.npy', original.flatten().detach().numpy())\n",
+    "np.save('baseline_vae_midis/reconstruction50.npy', np.array(reconstruction))"
    ]
   },
   {
