--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -2,23 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Cambini\n",
-      "Starting Faure\n",
-      "Starting Brahms\n",
+      "Starting Faure\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/pretty_midi/pretty_midi.py:101: RuntimeWarning: Tempo, Key or Time signature change events found on non-zero tracks.  This is not a valid type 0 or type 1 MIDI file.  Tempo, Key or Time Signature may be wrong.\n",
+      "  RuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Starting Schubert\n",
-      "Starting Beethoven\n",
-      "Starting Haydn\n",
+      "Starting Cambini\n",
       "Starting Ravel\n",
       "Starting Bach\n",
+      "Starting Dvorak\n",
+      "Starting Brahms\n",
       "Starting Mozart\n",
-      "Starting Dvorak\n"
+      "Starting Beethoven\n",
+      "Starting Haydn\n"
      ]
     }
    ],
@@ -40,20 +54,8 @@
     "num_time_shifts = 100 \n",
     "min_time_shift = 0.01\n",
     "\n",
-    "# Represents dynamics. There are 128 possible velocities but the music transformer\n",
-    "# uses 32, so that's what we'll use here\n",
-    "num_velocities = 32\n",
-    "\n",
-    "# A message can be NOTE_ON, NOTE_OFF, TIME_SHIFT, or SET_VELOCITY\n",
-    "message_dim = 2*num_notes + num_time_shifts + num_velocities\n",
-    "\n",
-    "# quantize_velocity: takes a MIDI velocity value and puts it into the correct bin\n",
-    "# in our reduced representation\n",
-    "# ARGUMENTS\n",
-    "# velocity: a MIDI velocity between 0 and 127 (inclusive)\n",
-    "# RETURN: the quantized velocity\n",
-    "def quantize_velocity(velocity):\n",
-    "    return int(velocity*num_velocities/128)\n",
+    "# A message can be NOTE_ON, NOTE_OFF, TIME_SHIFT\n",
+    "message_dim = 2*num_notes + num_time_shifts\n",
     "\n",
     "# quantize_time_shift: takes a time shift and puts it into the correct bin\n",
     "# in our reduced representation\n",
@@ -77,21 +79,13 @@
     "def note_off_event(note):\n",
     "    return num_notes + note\n",
     "\n",
-    "# velocity_event: generates index for a quantized velocity\n",
-    "# ARGUMENTS\n",
-    "# velocity: a quantized MIDI velocity\n",
-    "# RETURN: the index of the SET_VELOCITY message\n",
-    "def velocity_event(velocity):\n",
-    "    assert(0 <= velocity and velocity < num_velocities)\n",
-    "    return 2*num_notes + velocity\n",
-    "\n",
     "# time_shift_event: generates the index for a TIME_SHIFT event\n",
     "# ARGUMENTS\n",
     "# time_shift: the quantized time shift\n",
-    "# RETURN: a one-hot encoding of the TIME_SHIFT message\n",
+    "# RETURN: the index of the TIME_SHIFT message\n",
     "def time_shift_event(time_shift):\n",
     "    assert(0 <= time_shift and time_shift < num_time_shifts)\n",
-    "    return 2*num_notes + num_velocities + time_shift\n",
+    "    return 2*num_notes + time_shift\n",
     "\n",
     "# append_time_shift: appends a time shift event to the data array. If the time\n",
     "# shift is too large, split it into multiple small time shifts\n",
@@ -139,10 +133,7 @@
     "        # Store the time of each message. These won't appear in the final data array\n",
     "        times = []\n",
     "        \n",
-    "        for i, instrument in enumerate(mid.instruments):\n",
-    "            # Quantized value of the last velocity message\n",
-    "            last_velocity = -1\n",
-    "            \n",
+    "        for i, instrument in enumerate(mid.instruments):          \n",
     "            # Priority queue of notes to turn off and the times to turn them off.\n",
     "            # Specifically, this is a list of tuples of the form (off_time, pitch),\n",
     "            # where the first element of the list is always the next note to turn off\n",
@@ -163,13 +154,6 @@
     "                    heapq.heappop(off_queue)\n",
     "                    \n",
     "                time = note.start\n",
-    "                    \n",
-    "                velocity = quantize_velocity(note.velocity)\n",
-    "                if velocity != last_velocity:\n",
-    "                    # We have a new velocity. Add a SET_VELOCITY event\n",
-    "                    last_velocity = velocity\n",
-    "                    data.append(velocity_event(velocity))\n",
-    "                    times.append(time)\n",
     "                \n",
     "                data.append(note_on_event(note.pitch))\n",
     "                times.append(time)\n",
