--- a/data_to_midi_unified.ipynb
+++ b/data_to_midi_unified.ipynb
@@ -12,23 +12,22 @@
     "\n",
     "num_notes = 128 # Number of pitches in MIDI\n",
     "num_time_shifts = 100\n",
-    "num_velocities = 32\n",
     "min_time_shift = 0.01"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('gen_history.npy', allow_pickle=True)\n",
-    "instruments = np.load('gen_instruments.npy', allow_pickle=True)"
+    "data = np.load('train_unified/recording100.npy', allow_pickle=True)\n",
+    "instruments = np.load('train_unified/instruments100.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +39,10 @@
     "    recording.instruments.append(pretty_midi.Instrument(program=i,name=pretty_midi.program_to_instrument_name(i)))\n",
     "    \n",
     "curr_time = 0\n",
-    "curr_velocity = [96 for channel in range(len(channels))]\n",
     "#start time and velocity of the current note being played\n",
     "note_start = [{} for channels in range(len(channels))]\n",
-    "note_velocity = [{} for channel in range(len(channels))]\n",
     "note_same = [{} for channel in range(len(channels))]\n",
-    "for m, idx in enumerate(data[:, 0]):\n",
+    "for m, idx in enumerate(data[:1000, 0]):\n",
     "    channel = data[m, 1]\n",
     "    if idx < num_notes:\n",
     "        #note on event\n",
@@ -53,7 +50,6 @@
     "            note_same[channel][idx] += 1\n",
     "            continue\n",
     "        note_start[channel][idx] = curr_time\n",
-    "        note_velocity[channel][idx] = curr_velocity[channel]\n",
     "        note_same[channel][idx] = 1\n",
     "    elif idx < 2*num_notes:\n",
     "        #note off event\n",
@@ -63,32 +59,27 @@
     "            #raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
     "        note_same[channel][curr_note] -= 1\n",
     "        if note_same[channel][curr_note] == 0:\n",
-    "            note=pretty_midi.Note(velocity=note_velocity[channel][curr_note], pitch=curr_note, start=note_start[channel][curr_note], end=curr_time)\n",
+    "            note=pretty_midi.Note(velocity=96, pitch=curr_note, start=note_start[channel][curr_note], end=curr_time)\n",
     "            recording.instruments[channel].notes.append(note)\n",
     "            del note_start[channel][curr_note]\n",
-    "            del note_velocity[channel][curr_note]\n",
     "            del note_same[channel][curr_note]\n",
-    "    elif idx < 2*num_notes + num_velocities:\n",
-    "        #velocity event\n",
-    "        #reversing the quantization in preprocess operation\n",
-    "        curr_velocity[channel] = int((idx-2*num_notes)*128/num_velocities)\n",
-    "    elif idx < 2*num_notes + num_time_shifts + num_velocities:\n",
+    "    elif idx < 2*num_notes + num_time_shifts:\n",
     "        #time shift event\n",
-    "        curr_time += (idx - 2*num_notes - num_velocities + 1)*min_time_shift"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recording.write(\"gen_midi.mid\")"
+    "        curr_time += (idx - 2*num_notes + 1)*min_time_shift"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recording.write(\"test_rec100.mid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,19 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beethoven/2416_lvbsext3.mid\n"
+      "Faure/2167_gr_f45m2.mid\n"
      ]
     }
    ],
    "source": [
-    "print(res[100])"
+    "print(res[0])"
    ]
   },
   {
